[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interfaces/GUI.gd" type="Script" id=1]
[ext_resource path="res://Interfaces/PauseMenu.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "OnMoneyChange"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Rows/Row3/VBoxContainer/MoneyContainer/HBoxContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.482353, 0.847059, 0.0862745, 1 ), Color( 0.482353, 0.847059, 0.0862745, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/Rows/Row3/VBoxContainer/MoneyContainer/HBoxContainer:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/Rows/Row3/VBoxContainer/MoneyContainer/HBoxContainer:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -4.0, 4.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "OnRoundChange"
length = 1.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Rows/Row1/CurrentRound:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2.5, 2.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/Rows/Row1/CurrentRound:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.972549, 0.803922, 0.0392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 10.0
margin_right = -30.0
margin_bottom = 20.0
mouse_filter = 2

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_right = 580.0
margin_bottom = 370.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Row1" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 580.0
margin_bottom = 120.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CurrentRound" type="Label" parent="MarginContainer/Rows/Row1"]
margin_right = 6.0
margin_bottom = 21.0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"

[node name="Row2" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 124.0
margin_right = 580.0
margin_bottom = 245.0
grow_horizontal = 0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Row3" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 249.0
margin_right = 580.0
margin_bottom = 370.0
grow_horizontal = 0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Rows/Row3"]
margin_right = 104.0
margin_bottom = 121.0

[node name="MoneyContainer" type="CenterContainer" parent="MarginContainer/Rows/Row3/VBoxContainer"]
margin_right = 104.0
margin_bottom = 21.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/Row3/VBoxContainer/MoneyContainer"]
margin_left = 30.0
margin_right = 73.0
margin_bottom = 21.0

[node name="MoneySign" type="Label" parent="MarginContainer/Rows/Row3/VBoxContainer/MoneyContainer/HBoxContainer"]
margin_right = 9.0
margin_bottom = 21.0
text = "$"

[node name="Money" type="Label" parent="MarginContainer/Rows/Row3/VBoxContainer/MoneyContainer/HBoxContainer"]
margin_left = 13.0
margin_right = 43.0
margin_bottom = 21.0
text = "350"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/Row3/VBoxContainer"]
margin_top = 25.0
margin_right = 104.0
margin_bottom = 75.0

[node name="Ammo" type="CenterContainer" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 50.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/Ammo"]
margin_right = 70.0
margin_bottom = 50.0
rect_min_size = Vector2( 70, 50 )
color = Color( 0.129412, 0.121569, 0.188235, 0.976471 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/Ammo"]
margin_left = 4.0
margin_top = 14.0
margin_right = 66.0
margin_bottom = 35.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/Ammo/VBoxContainer"]
margin_right = 62.0
margin_bottom = 21.0

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/Ammo/VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.807843, 0.807843, 0.807843, 1 )
text = "25"

[node name="Divisor" type="Label" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/Ammo/VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.807843, 0.807843, 0.807843, 1 )
text = "/"

[node name="TotalAmmo" type="Label" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/Ammo/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 62.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.807843, 0.807843, 0.807843, 1 )
text = "125"

[node name="WeaponContainer" type="CenterContainer" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 104.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/WeaponContainer"]
margin_right = 30.0
margin_bottom = 50.0
rect_min_size = Vector2( 30, 50 )
color = Color( 0.129412, 0.121569, 0.188235, 0.976471 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/WeaponContainer/ColorRect"]
margin_right = 30.0
margin_bottom = 50.0

[node name="Weapon1" type="TextureRect" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/WeaponContainer/ColorRect/VBoxContainer"]
margin_right = 30.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 4

[node name="Weapon2" type="TextureRect" parent="MarginContainer/Rows/Row3/VBoxContainer/HBoxContainer/WeaponContainer/ColorRect/VBoxContainer"]
margin_top = 27.0
margin_right = 30.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 4

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OnMoneyChange = SubResource( 1 )
anims/OnRoundChange = SubResource( 2 )
